[+] 1rem font size on inputs to avoid page zoom on ios due to the font size being less than 16px

--- a/src/assets/scss/_shared-styles.scss
+++ b/src/assets/scss/_shared-styles.scss
@@ -91,6 +91,12 @@
   }
 }
 
+.ios {
+  .form-control {
+    font-size: 1rem;
+  }
+}
+
 .form-control {
   &:focus-visible {
     text-shadow: none;
